example/ToyParser.cpp

// Generated from Toy.g4 by ANTLR 4.10.1


#include "ToyVisitor.h"

#include "ToyParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ToyParserStaticData final {
  ToyParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ToyParserStaticData(const ToyParserStaticData&) = delete;
  ToyParserStaticData(ToyParserStaticData&&) = delete;
  ToyParserStaticData& operator=(const ToyParserStaticData&) = delete;
  ToyParserStaticData& operator=(ToyParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

std::once_flag toyParserOnceFlag;
ToyParserStaticData *toyParserStaticData = nullptr;

void toyParserInitialize() {
  assert(toyParserStaticData == nullptr);
  auto staticData = std::make_unique<ToyParserStaticData>(
    std::vector<std::string>{
      "module", "expression", "returnExpr", "identifierExpr", "tensorLiteral", 
      "varDecl", "type", "funDefine", "prototype", "declList", "block", 
      "blockExpr"
    },
    std::vector<std::string>{
      "", "'return'", "')'", "'['", "", "'('", "']'", "'var'", "'add'", 
      "'sub'", "", "','", "';'", "'{'", "'def'", "'}'", "'<'", "'='", "'>'"
    },
    std::vector<std::string>{
      "", "Return", "ParentheseOpen", "SbracketOpen", "Identifier", "ParentheseClose", 
      "SbracketClose", "Var", "Add", "Sub", "Number", "Comma", "Semi", "BracketOpen", 
      "Def", "BracketClose", "AngleBracketOpen", "Equal", "AngleBracketClose", 
      "WS", "Comment"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  toyParserStaticData = staticData.release();
}

}

ToyParser::ToyParser(TokenStream *input) : ToyParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

ToyParser::ToyParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  ToyParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *toyParserStaticData->atn, toyParserStaticData->decisionToDFA, toyParserStaticData->sharedContextCache, options);
}

ToyParser::~ToyParser() {
  delete _interpreter;
}

const atn::ATN& ToyParser::getATN() const {
  return *toyParserStaticData->atn;
}

std::string ToyParser::getGrammarFileName() const {
  return "Toy.g4";
}

const std::vector<std::string>& ToyParser::getRuleNames() const {
  return toyParserStaticData->ruleNames;
}

const dfa::Vocabulary& ToyParser::getVocabulary() const {
  return toyParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ToyParser::getSerializedATN() const {
  return toyParserStaticData->serializedATN;
}


//----------------- ModuleContext ------------------------------------------------------------------

ToyParser::ModuleContext::ModuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ToyParser::FunDefineContext *> ToyParser::ModuleContext::funDefine() {
  return getRuleContexts<ToyParser::FunDefineContext>();
}

ToyParser::FunDefineContext* ToyParser::ModuleContext::funDefine(size_t i) {
  return getRuleContext<ToyParser::FunDefineContext>(i);
}


size_t ToyParser::ModuleContext::getRuleIndex() const {
  return ToyParser::RuleModule;
}


std::any ToyParser::ModuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ToyVisitor*>(visitor))
    return parserVisitor->visitModule(this);
  else
    return visitor->visitChildren(this);
}

ToyParser::ModuleContext* ToyParser::module() {
  ModuleContext *_localctx = _tracker.createInstance<ModuleContext>(_ctx, getState());
  enterRule(_localctx, 0, ToyParser::RuleModule);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(25); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(24);
      funDefine();
      setState(27); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == ToyParser::Def);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

ToyParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ToyParser::ExpressionContext::Number() {
  return getToken(ToyParser::Number, 0);
}

ToyParser::TensorLiteralContext* ToyParser::ExpressionContext::tensorLiteral() {
  return getRuleContext<ToyParser::TensorLiteralContext>(0);
}

ToyParser::IdentifierExprContext* ToyParser::ExpressionContext::identifierExpr() {
  return getRuleContext<ToyParser::IdentifierExprContext>(0);
}


size_t ToyParser::ExpressionContext::getRuleIndex() const {
  return ToyParser::RuleExpression;
}


std::any ToyParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ToyVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}

ToyParser::ExpressionContext* ToyParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 2, ToyParser::RuleExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(32);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(29);
      match(ToyParser::Number);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(30);
      tensorLiteral();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(31);
      identifierExpr();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnExprContext ------------------------------------------------------------------

ToyParser::ReturnExprContext::ReturnExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ToyParser::ReturnExprContext::Return() {
  return getToken(ToyParser::Return, 0);
}

ToyParser::ExpressionContext* ToyParser::ReturnExprContext::expression() {
  return getRuleContext<ToyParser::ExpressionContext>(0);
}


size_t ToyParser::ReturnExprContext::getRuleIndex() const {
  return ToyParser::RuleReturnExpr;
}


std::any ToyParser::ReturnExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ToyVisitor*>(visitor))
    return parserVisitor->visitReturnExpr(this);
  else
    return visitor->visitChildren(this);
}

ToyParser::ReturnExprContext* ToyParser::returnExpr() {
  ReturnExprContext *_localctx = _tracker.createInstance<ReturnExprContext>(_ctx, getState());
  enterRule(_localctx, 4, ToyParser::RuleReturnExpr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(34);
    match(ToyParser::Return);
    setState(36);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ToyParser::SbracketOpen)
      | (1ULL << ToyParser::Identifier)
      | (1ULL << ToyParser::Number))) != 0)) {
      setState(35);
      expression();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentifierExprContext ------------------------------------------------------------------

ToyParser::IdentifierExprContext::IdentifierExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ToyParser::IdentifierExprContext::Identifier() {
  return getToken(ToyParser::Identifier, 0);
}

tree::TerminalNode* ToyParser::IdentifierExprContext::ParentheseOpen() {
  return getToken(ToyParser::ParentheseOpen, 0);
}

tree::TerminalNode* ToyParser::IdentifierExprContext::ParentheseClose() {
  return getToken(ToyParser::ParentheseClose, 0);
}

std::vector<ToyParser::ExpressionContext *> ToyParser::IdentifierExprContext::expression() {
  return getRuleContexts<ToyParser::ExpressionContext>();
}

ToyParser::ExpressionContext* ToyParser::IdentifierExprContext::expression(size_t i) {
  return getRuleContext<ToyParser::ExpressionContext>(i);
}

std::vector<tree::TerminalNode *> ToyParser::IdentifierExprContext::Comma() {
  return getTokens(ToyParser::Comma);
}

tree::TerminalNode* ToyParser::IdentifierExprContext::Comma(size_t i) {
  return getToken(ToyParser::Comma, i);
}


size_t ToyParser::IdentifierExprContext::getRuleIndex() const {
  return ToyParser::RuleIdentifierExpr;
}


std::any ToyParser::IdentifierExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ToyVisitor*>(visitor))
    return parserVisitor->visitIdentifierExpr(this);
  else
    return visitor->visitChildren(this);
}

ToyParser::IdentifierExprContext* ToyParser::identifierExpr() {
  IdentifierExprContext *_localctx = _tracker.createInstance<IdentifierExprContext>(_ctx, getState());
  enterRule(_localctx, 6, ToyParser::RuleIdentifierExpr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(52);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(38);
      match(ToyParser::Identifier);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(39);
      match(ToyParser::Identifier);
      setState(40);
      match(ToyParser::ParentheseOpen);
      setState(49);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << ToyParser::SbracketOpen)
        | (1ULL << ToyParser::Identifier)
        | (1ULL << ToyParser::Number))) != 0)) {
        setState(41);
        expression();
        setState(46);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == ToyParser::Comma) {
          setState(42);
          match(ToyParser::Comma);
          setState(43);
          expression();
          setState(48);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
      }
      setState(51);
      match(ToyParser::ParentheseClose);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TensorLiteralContext ------------------------------------------------------------------

ToyParser::TensorLiteralContext::TensorLiteralContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ToyParser::TensorLiteralContext::SbracketOpen() {
  return getToken(ToyParser::SbracketOpen, 0);
}

tree::TerminalNode* ToyParser::TensorLiteralContext::SbracketClose() {
  return getToken(ToyParser::SbracketClose, 0);
}

std::vector<ToyParser::TensorLiteralContext *> ToyParser::TensorLiteralContext::tensorLiteral() {
  return getRuleContexts<ToyParser::TensorLiteralContext>();
}

ToyParser::TensorLiteralContext* ToyParser::TensorLiteralContext::tensorLiteral(size_t i) {
  return getRuleContext<ToyParser::TensorLiteralContext>(i);
}

std::vector<tree::TerminalNode *> ToyParser::TensorLiteralContext::Comma() {
  return getTokens(ToyParser::Comma);
}

tree::TerminalNode* ToyParser::TensorLiteralContext::Comma(size_t i) {
  return getToken(ToyParser::Comma, i);
}

tree::TerminalNode* ToyParser::TensorLiteralContext::Number() {
  return getToken(ToyParser::Number, 0);
}


size_t ToyParser::TensorLiteralContext::getRuleIndex() const {
  return ToyParser::RuleTensorLiteral;
}


std::any ToyParser::TensorLiteralContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ToyVisitor*>(visitor))
    return parserVisitor->visitTensorLiteral(this);
  else
    return visitor->visitChildren(this);
}

ToyParser::TensorLiteralContext* ToyParser::tensorLiteral() {
  TensorLiteralContext *_localctx = _tracker.createInstance<TensorLiteralContext>(_ctx, getState());
  enterRule(_localctx, 8, ToyParser::RuleTensorLiteral);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(67);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ToyParser::SbracketOpen: {
        enterOuterAlt(_localctx, 1);
        setState(54);
        match(ToyParser::SbracketOpen);
        setState(63);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == ToyParser::SbracketOpen

        || _la == ToyParser::Number) {
          setState(55);
          tensorLiteral();
          setState(60);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == ToyParser::Comma) {
            setState(56);
            match(ToyParser::Comma);
            setState(57);
            tensorLiteral();
            setState(62);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(65);
        match(ToyParser::SbracketClose);
        break;
      }

      case ToyParser::Number: {
        enterOuterAlt(_localctx, 2);
        setState(66);
        match(ToyParser::Number);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclContext ------------------------------------------------------------------

ToyParser::VarDeclContext::VarDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ToyParser::VarDeclContext::Var() {
  return getToken(ToyParser::Var, 0);
}

tree::TerminalNode* ToyParser::VarDeclContext::Identifier() {
  return getToken(ToyParser::Identifier, 0);
}

ToyParser::TypeContext* ToyParser::VarDeclContext::type() {
  return getRuleContext<ToyParser::TypeContext>(0);
}

tree::TerminalNode* ToyParser::VarDeclContext::Equal() {
  return getToken(ToyParser::Equal, 0);
}

ToyParser::ExpressionContext* ToyParser::VarDeclContext::expression() {
  return getRuleContext<ToyParser::ExpressionContext>(0);
}


size_t ToyParser::VarDeclContext::getRuleIndex() const {
  return ToyParser::RuleVarDecl;
}


std::any ToyParser::VarDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ToyVisitor*>(visitor))
    return parserVisitor->visitVarDecl(this);
  else
    return visitor->visitChildren(this);
}

ToyParser::VarDeclContext* ToyParser::varDecl() {
  VarDeclContext *_localctx = _tracker.createInstance<VarDeclContext>(_ctx, getState());
  enterRule(_localctx, 10, ToyParser::RuleVarDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    match(ToyParser::Var);
    setState(70);
    match(ToyParser::Identifier);
    setState(72);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ToyParser::AngleBracketOpen) {
      setState(71);
      type();
    }
    setState(76);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ToyParser::Equal) {
      setState(74);
      match(ToyParser::Equal);
      setState(75);
      expression();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

ToyParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ToyParser::TypeContext::AngleBracketOpen() {
  return getToken(ToyParser::AngleBracketOpen, 0);
}

std::vector<tree::TerminalNode *> ToyParser::TypeContext::Number() {
  return getTokens(ToyParser::Number);
}

tree::TerminalNode* ToyParser::TypeContext::Number(size_t i) {
  return getToken(ToyParser::Number, i);
}

tree::TerminalNode* ToyParser::TypeContext::AngleBracketClose() {
  return getToken(ToyParser::AngleBracketClose, 0);
}

std::vector<tree::TerminalNode *> ToyParser::TypeContext::Comma() {
  return getTokens(ToyParser::Comma);
}

tree::TerminalNode* ToyParser::TypeContext::Comma(size_t i) {
  return getToken(ToyParser::Comma, i);
}


size_t ToyParser::TypeContext::getRuleIndex() const {
  return ToyParser::RuleType;
}


std::any ToyParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ToyVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

ToyParser::TypeContext* ToyParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 12, ToyParser::RuleType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    match(ToyParser::AngleBracketOpen);
    setState(79);
    match(ToyParser::Number);
    setState(84);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ToyParser::Comma) {
      setState(80);
      match(ToyParser::Comma);
      setState(81);
      match(ToyParser::Number);
      setState(86);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(87);
    match(ToyParser::AngleBracketClose);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunDefineContext ------------------------------------------------------------------

ToyParser::FunDefineContext::FunDefineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ToyParser::PrototypeContext* ToyParser::FunDefineContext::prototype() {
  return getRuleContext<ToyParser::PrototypeContext>(0);
}

ToyParser::BlockContext* ToyParser::FunDefineContext::block() {
  return getRuleContext<ToyParser::BlockContext>(0);
}


size_t ToyParser::FunDefineContext::getRuleIndex() const {
  return ToyParser::RuleFunDefine;
}


std::any ToyParser::FunDefineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ToyVisitor*>(visitor))
    return parserVisitor->visitFunDefine(this);
  else
    return visitor->visitChildren(this);
}

ToyParser::FunDefineContext* ToyParser::funDefine() {
  FunDefineContext *_localctx = _tracker.createInstance<FunDefineContext>(_ctx, getState());
  enterRule(_localctx, 14, ToyParser::RuleFunDefine);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    prototype();
    setState(90);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrototypeContext ------------------------------------------------------------------

ToyParser::PrototypeContext::PrototypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ToyParser::PrototypeContext::Def() {
  return getToken(ToyParser::Def, 0);
}

tree::TerminalNode* ToyParser::PrototypeContext::Identifier() {
  return getToken(ToyParser::Identifier, 0);
}

tree::TerminalNode* ToyParser::PrototypeContext::ParentheseOpen() {
  return getToken(ToyParser::ParentheseOpen, 0);
}

tree::TerminalNode* ToyParser::PrototypeContext::ParentheseClose() {
  return getToken(ToyParser::ParentheseClose, 0);
}

ToyParser::DeclListContext* ToyParser::PrototypeContext::declList() {
  return getRuleContext<ToyParser::DeclListContext>(0);
}


size_t ToyParser::PrototypeContext::getRuleIndex() const {
  return ToyParser::RulePrototype;
}


std::any ToyParser::PrototypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ToyVisitor*>(visitor))
    return parserVisitor->visitPrototype(this);
  else
    return visitor->visitChildren(this);
}

ToyParser::PrototypeContext* ToyParser::prototype() {
  PrototypeContext *_localctx = _tracker.createInstance<PrototypeContext>(_ctx, getState());
  enterRule(_localctx, 16, ToyParser::RulePrototype);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    match(ToyParser::Def);
    setState(93);
    match(ToyParser::Identifier);
    setState(94);
    match(ToyParser::ParentheseOpen);
    setState(96);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ToyParser::Identifier) {
      setState(95);
      declList();
    }
    setState(98);
    match(ToyParser::ParentheseClose);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclListContext ------------------------------------------------------------------

ToyParser::DeclListContext::DeclListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ToyParser::DeclListContext::Identifier() {
  return getToken(ToyParser::Identifier, 0);
}

tree::TerminalNode* ToyParser::DeclListContext::Comma() {
  return getToken(ToyParser::Comma, 0);
}

ToyParser::DeclListContext* ToyParser::DeclListContext::declList() {
  return getRuleContext<ToyParser::DeclListContext>(0);
}


size_t ToyParser::DeclListContext::getRuleIndex() const {
  return ToyParser::RuleDeclList;
}


std::any ToyParser::DeclListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ToyVisitor*>(visitor))
    return parserVisitor->visitDeclList(this);
  else
    return visitor->visitChildren(this);
}

ToyParser::DeclListContext* ToyParser::declList() {
  DeclListContext *_localctx = _tracker.createInstance<DeclListContext>(_ctx, getState());
  enterRule(_localctx, 18, ToyParser::RuleDeclList);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(104);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(100);
      match(ToyParser::Identifier);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(101);
      match(ToyParser::Identifier);
      setState(102);
      match(ToyParser::Comma);
      setState(103);
      declList();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

ToyParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ToyParser::BlockContext::BracketOpen() {
  return getToken(ToyParser::BracketOpen, 0);
}

tree::TerminalNode* ToyParser::BlockContext::BracketClose() {
  return getToken(ToyParser::BracketClose, 0);
}

std::vector<ToyParser::BlockExprContext *> ToyParser::BlockContext::blockExpr() {
  return getRuleContexts<ToyParser::BlockExprContext>();
}

ToyParser::BlockExprContext* ToyParser::BlockContext::blockExpr(size_t i) {
  return getRuleContext<ToyParser::BlockExprContext>(i);
}

std::vector<tree::TerminalNode *> ToyParser::BlockContext::Semi() {
  return getTokens(ToyParser::Semi);
}

tree::TerminalNode* ToyParser::BlockContext::Semi(size_t i) {
  return getToken(ToyParser::Semi, i);
}


size_t ToyParser::BlockContext::getRuleIndex() const {
  return ToyParser::RuleBlock;
}


std::any ToyParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ToyVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

ToyParser::BlockContext* ToyParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 20, ToyParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(ToyParser::BracketOpen);
    setState(112);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ToyParser::Return)
      | (1ULL << ToyParser::SbracketOpen)
      | (1ULL << ToyParser::Identifier)
      | (1ULL << ToyParser::Var)
      | (1ULL << ToyParser::Number))) != 0)) {
      setState(107);
      blockExpr();
      setState(108);
      match(ToyParser::Semi);
      setState(114);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(115);
    match(ToyParser::BracketClose);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockExprContext ------------------------------------------------------------------

ToyParser::BlockExprContext::BlockExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ToyParser::VarDeclContext* ToyParser::BlockExprContext::varDecl() {
  return getRuleContext<ToyParser::VarDeclContext>(0);
}

ToyParser::ReturnExprContext* ToyParser::BlockExprContext::returnExpr() {
  return getRuleContext<ToyParser::ReturnExprContext>(0);
}

ToyParser::ExpressionContext* ToyParser::BlockExprContext::expression() {
  return getRuleContext<ToyParser::ExpressionContext>(0);
}


size_t ToyParser::BlockExprContext::getRuleIndex() const {
  return ToyParser::RuleBlockExpr;
}


std::any ToyParser::BlockExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ToyVisitor*>(visitor))
    return parserVisitor->visitBlockExpr(this);
  else
    return visitor->visitChildren(this);
}

ToyParser::BlockExprContext* ToyParser::blockExpr() {
  BlockExprContext *_localctx = _tracker.createInstance<BlockExprContext>(_ctx, getState());
  enterRule(_localctx, 22, ToyParser::RuleBlockExpr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(120);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ToyParser::Var: {
        enterOuterAlt(_localctx, 1);
        setState(117);
        varDecl();
        break;
      }

      case ToyParser::Return: {
        enterOuterAlt(_localctx, 2);
        setState(118);
        returnExpr();
        break;
      }

      case ToyParser::SbracketOpen:
      case ToyParser::Identifier:
      case ToyParser::Number: {
        enterOuterAlt(_localctx, 3);
        setState(119);
        expression();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

void ToyParser::initialize() {
  std::call_once(toyParserOnceFlag, toyParserInitialize);
}
